# SimpleRaytracer

./: .clang-format  CMakeLists.txt
include/: camera.hpp  color.hpp  light.hpp  material.hpp  math.hpp  obj_loader.hpp  raytracer.hpp  scene.hpp  scene_object.hpp  scene_tree.hpp  sdl_window.hpp
scenes/: bunny.json  cylinder.json  default.json
src/: camera.cpp  main.cpp  material.cpp  math.cpp  obj_loader.cpp  raytracer.cpp  scene.cpp  scene_tree.cpp  sdl_window.cpp
tests/: math_tests.cpp
